[package]
name = "robot_intelligence"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.44.2", features = ["rt-multi-thread"]}
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
